[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["milad d"]
description = "scratch"
name = "scratch"
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
jupyterlab = "^3.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
black = "21.6b0"
flake8 = "3.9.2"
isort = "5.9.1"
virtualenv = "20.7.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
force_single_line = "True"
known_genart = "genart"
sections = "FUTURE,STDLIB,THIRDPARTY,GENART"
#known_tests = "tests"
#sections = "FUTURE,STDLIB,THIRDPARTY,GENART,TESTS"
